<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_find"
        android:title="@string/action_find"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_preview"
        android:title="@string/action_preview"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_zoom_in"
        android:title="@string/action_zoom_in"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_zoom_out"
        android:title="@string/action_zoom_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_word_wrap"
        android:title="@string/action_word_wrap"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/menu_rename"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

</menu>
